--- a/nextapp/package.json
+++ b/nextapp/package.json
@@ -14,6 +14,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2"
   }
